tests/snapshots/parser__bools_and_null__bool_false.snap
---
source: tests/parser.rs
expression: "parse(\"false\")"
---
Ok(
    [
        Expr(
            Bool(
                false,
                Span {
                    start: 0,
                    end: 5,
                },
            ),
        ),
    ],
)
