tests/snapshots/parser__bools_and_null__bool_true.snap
---
source: tests/parser.rs
expression: "parse(\"true\")"
---
Ok(
    [
        Expr(
            Bool(
                true,
                Span {
                    start: 0,
                    end: 4,
                },
            ),
        ),
    ],
)
