tests/snapshots/parser__bools_and_null__null_literal.snap
---
source: tests/parser.rs
expression: "parse(\"null\")"
---
Ok(
    [
        Expr(
            Null(
                Span {
                    start: 0,
                    end: 4,
                },
            ),
        ),
    ],
)
